--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://localhost/crudspring
+spring.datasource.url=jdbc:mysql://localhost:3306/crudspring
 spring.datasource.username=root
 spring.datasource.password=Admin
 
