Solucione el error que no me dejaba ejecutar el front, ya puedo hacerlo, pero no encripta las contraseña de los nuevos usuarios...

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.password=Admin
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dll-auto=update
+spring.main.allow-circular-references=true
 
 
 
