--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
-spring.datasource.url=jdbc:mysql://containers-us-west-121.railway.app:6976/railway
+spring.datasource.url=jdbc:mysql://localhost:3306/crudspring
 spring.datasource.username=root
-spring.datasource.password=IAI0TkIssJAQOvGk1Rgf
+spring.datasource.password=Admin
 
 spring.jpa.show-sql=true
-spring.jpa.hibernate.dll-auto=create
+spring.jpa.hibernate.dll-auto=update
 spring.jpa.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.servlet.multipart.max-file-size=20MB
 spring.servlet.multipart.max-request-size=20MB
