--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/crudspring
-spring.datasource.username=root
-spring.datasource.password=Admin
+spring.datasource.username=*
+spring.datasource.password=*
 
 spring.jpa.show-sql=true
 spring.jpa.hibernate.dll-auto=update
